--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -25,8 +25,7 @@ jobs:
     permissions:
       pull-requests: write
     name: "${{ github.ref == 'refs/heads/main' && '(Production)' || '(Preview)' }}"
-    runs-on:
-      group: default
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
