--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -112,8 +112,9 @@ jobs:
           CLOUDFLARE_API_TOKEN: "${{ secrets.CF_API_TOKEN }}"
         shell: bash
         run: |
-          mkdir -p emptyDir
-          node_modules/wrangler/bin/wrangler.js deploy --assets emptyDir
+          ## uncomment for first run
+          # mkdir -p emptyDir
+          # node_modules/wrangler/bin/wrangler.js deploy --assets emptyDir
           environment=""
           url=""
           echo "Git Ref: ${{ github.ref }}"
