--- a/package.json
+++ b/package.json
@@ -20,14 +20,11 @@
     "@astrojs/check": "0.9.6",
     "@astrojs/sitemap": "3.6.0",
     "@astrojs/starlight": "0.37.1",
-    "@astrojs/starlight-tailwind": "4.0.2",
     "@playform/compress": "0.2.0",
-    "@tailwindcss/postcss": "4.1.18",
+    "@tailwindcss/vite": "4.1.18",
     "astro": "5.16.6",
     "astro-better-image-service": "2.1.10",
     "astro-robots-txt": "1.0.0",
-    "autoprefixer": "10.4.23",
-    "postcss": "8.5.6",
     "prettier": "3.7.4",
     "sharp": "0.34.5",
     "starlight-image-zoom": "0.13.2",
